--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -6,6 +6,7 @@ html, body {
     padding: 0;
     font-family: "Poppins", "Arial", "Verdana", sans-serif;
     /* font-family: 'Kanit', sans-serif; */
+    background-color: #8ea7bd;
 }
 
 
