--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -2,15 +2,13 @@
 
 /* Setup inicial pagina */
 html, body {
-    margin: 0;
     padding: 0;
     font-family: "Poppins", "Arial", "Verdana", sans-serif;
     /* font-family: 'Kanit', sans-serif; */
-    background-color: #8ea7bd;
+    background-color: #fff;
 }
 
-
-p {
+.p {
     /* 1em = 16px - compatibilidade */
     font-size:  1.5em;
 
@@ -75,7 +73,52 @@ p {
     background-color: #ffff00;
 }
 
-#meuNome{
+#meuNome {
     background-color: #0000ff;
     color: #fff;
+}
+
+/* Adicionando Backgrounds */
+
+/* linear-gradiente (linear), radial-gradient (do centro para fora) */
+#pageContent {
+    background: linear-gradient(276deg, rgba(0,139,184,1), rgba(27,3,71, 1));
+    padding: 50px 50px 50px 50px;
+}
+
+/* font: style, variant, weigth, size/line-height, family */
+.text-overlay{
+    font: normal normal 300 1em/1em "Poppins";
+    color: #fff;
+}
+
+/* background image: url da imagem */
+/* background-repeat: permite repetição caso a imagem seja pequena */
+/* background-attachment: fixed - parallax effect */
+/* background-size: cover - cobrir todo o background  */
+#pageContentImage {
+    background: url('https://free4kwallpapers.com/uploads/originals/2019/11/18/hyperion-space-wallpaper.jpg') center no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 10px 25%;
+}
+
+/* padding: top right bottom left; */
+/* padding: vertical horizontal; */
+/* padding: all; */
+/* backdrop-filter - aplicar somente ao background algum efeito*/
+/* backdrop-filter - blur (px), brightness, contrast, grayscale, hue-rotate(10deg), invert, sepia, saturate;*/
+#pageContentBlur {
+    padding: 50px 50px 50px 50px;
+    backdrop-filter: blur(2px);
+}
+
+#divHeader {
+    font: normal normal 300 0.9em/1em "Arial";
+    text-transform: uppercase;
+    text-align: center;
+    background: linear-gradient(276deg, rgba(0,139,184,1), rgba(27,3,71, 1));
+    color: #fff;
+    margin-top: -10px;
+    padding: 20px 0px;
 }
